--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,23 +8,22 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    container: node:6
 
     env:
       TRAVIS_PULL_REQUEST: ${{ github.event.pull_request.number }}
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.3.1
+      - name: Checkout 🛎
+        uses: actions/checkout@v4
 
-      - name: Build
-        run: |
-          git clone https://github.com/frodrigo/gl-style-package-spec.git
-          cd gl-style-package-spec
-          bash ./task/run.sh
+      # - name: Build
+      #   run: |
+      #     git clone https://github.com/frodrigo/gl-style-package-spec.git
+      #     cd gl-style-package-spec
+      #     bash ./task/run.sh
 
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./gl-style-package-spec/build
+      # - name: Deploy
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: ./gl-style-package-spec/build
